Renamed module to github.com/litesolutions/justifay-id - Updated user-api imports to litesolutions/justifay-api (user-api-client is still there) - Removed remaining refs to legacy id

--- a/web/layouts/inside.html
+++ b/web/layouts/inside.html
@@ -53,9 +53,7 @@
         <li role="menuitem" class="flex flex-auto w-100 justify-center relative">
           <a href="{{ .appURL }}/discover" class="link db near-black near-black--light near-white--dark pv2 ph3">Discover</a>
         </li>
-        <li role="menuitem" class="flex flex-auto w-100 justify-center relative">
-          <a href="{{ .appURL }}/u/{{ .profile.LegacyID }}/library/favorites" class="link db near-black near-black--light near-white--dark pv2 ph3">Library</a>
-        </li>
+        <li role="divider" class="flex flex-auto w-100 justify-center"></li>
         <li role="menuitem" class="flex flex-auto justify-center w-100 mw4">
           <button title="Open menu" class="bg-transparent bn dropdown-toggle w-100 pa2 grow">
             <span class="flex justify-center items-center">
