FIX: Path should start with /api

--- a/web/layouts/outside.html
+++ b/web/layouts/outside.html
@@ -53,7 +53,7 @@
         </li>
         <li role="divider" class="flex flex-auto w-100 justify-center"></li>
         <li role="menuitem" class="flex flex-auto justify-center w-100">
-          <a href="{{ .appURL }}/user/connect/justifay" class="link pv1 ph3 ttu ba b--mid-gray b--dark-gray--dark db f6 b">Log In</a>
+          <a href="{{ .appURL }}/api/user/connect/justifay" class="link pv1 ph3 ttu ba b--mid-gray b--dark-gray--dark db f6 b">Log In</a>
         </li>
         <li role="divider" class="dn flex-auto w-100 justify-center"></li>
       </ul>
